force-app/main/default/objects/EAI_Log__c/EAI_Log__c.object-meta.xml
<CustomObject>
    <label>EAI Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>EAI Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EAI Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>