force-app/main/default/objects/EAI_Log__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>